Fix for responsive table dropdowns
Not a very good fix.
Adds scrollbar instead of allowing the dropdown to display outside the
box.

--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,7 @@
+.table-responsive {
+    overflow-y: visible; /*bootstrap fix*/
+}
+
 body {
     background-color: #ddd;
     background-image: url("images/wood1.png");
